force-app/main/default/objects/Target__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>Billing City of the related Company (Account), used for the [Billing City] email merge field. (R8)</description>
    <formula>Company_Name__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>