force-app/main/default/objects/Target__c/fields/Days_Until_Next_Email__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Next_Email__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Configurable wait (days) between call completion and the next email for call-driven steps. (R3)</description>
    <label>Days Until Next Email</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>