force-app/main/default/objects/Target__c/fields/Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date__c</fullName>
    <description>Scheduler due-date for the next cadence action. Indexed for the selective batch query. (R5, R15)</description>
    <label>Next Action Date</label>
    <type>DateTime</type>
</CustomField>