force-app/main/default/objects/Target__c/fields/Sequence_Active__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Kill switch for the email/call cadence. When false, the engine skips this Target. (R1)</description>
    <label>Sequence Active</label>
    <type>Checkbox</type>
</CustomField>