force-app/main/default/objects/Target__c/fields/Sequence_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Attachment_Id__c</fullName>
    <description>ContentDocumentId of the file uploaded via LWC, attached to every cadence email. (R7)</description>
    <label>Sequence Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>