force-app/main/default/objects/Target__c/fields/Sequence_Step__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Step__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current cadence step counter, 0-10. (R2)</description>
    <label>Sequence Step</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>