force-app/main/default/objects/Target__c/fields/Sequence_Stop_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Stop_Reason__c</fullName>
    <description>Reason the cadence was auto-stopped. (R4)</description>
    <label>Sequence Stop Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>