force-app/main/default/objects/Target__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Cleared</fullName>
                <default>true</default>
                <label>Not Cleared</label>
            </value>
            <value>
                <fullName>Conflicted</fullName>
            </value>
            <value>
                <fullName>In-Process</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Target Not Interested</fullName>
            </value>
            <value>
                <fullName>Client Not Interested</fullName>
            </value>
            <value>
                <fullName>Target Future Interest</fullName>
            </value>
            <value>
                <fullName>Client Future Interest</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>